--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ basepython =
     py37: {env:PYTHON:python3.7}
     py38: {env:PYTHON:python3.8}
     py39: {env:PYTHON:python3.9}
+    py310: {env:PYTHON:python3.10}
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-tests.txt
