--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -614,7 +614,7 @@ content.blocking.hosts.lists:
     valtype: Url
     none_ok: true
   desc: |
-    List of URLs to host blocklists for the hock blocker.
+    List of URLs to host blocklists for the host blocker.
 
     Only used when the simple host-blocker is used (see `content.blocking.method`).
 
