check-manifest: Ignore generated cheatsheet images

--- a/tox.ini
+++ b/tox.ini
@@ -129,7 +129,7 @@ passenv =
 deps =
      -r{toxinidir}/misc/requirements/requirements-check-manifest.txt
 commands =
-    {envdir}/bin/check-manifest --ignore 'qutebrowser/git-commit-id,qutebrowser/html/doc,qutebrowser/html/doc/*,*/__pycache__'
+    {envdir}/bin/check-manifest --ignore 'qutebrowser/git-commit-id,qutebrowser/html/doc,qutebrowser/html/doc/*,qutebrowser/html/doc/img/cheatsheet-*.png,*/__pycache__'
 
 [testenv:docs]
 basepython = {env:PYTHON:python3}
