--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -1223,7 +1223,7 @@ fileselect.single_file.command:
     placeholder: true
   default: ['xterm', '-e', 'export COLUMNS= LINES=;ranger --choosefile={}']
   desc: >-
-    Command (and arguments) to use for selecting a file in forms.
+    Command (and arguments) to use for selecting a single file in forms.
     The command should write the selected file path to the specified file.
 
     The following placeholders are defined:
