--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -1221,7 +1221,10 @@ fileselect.single_file.command:
   type:
     name: ShellCommand
     placeholder: true
-  default: ['xterm', '-e', 'export COLUMNS= LINES=;ranger --choosefile={}']
+    completions:
+      - ['xterm', '-e', 'ranger --choosefile={}']
+      - ['xterm', '-e', 'vifm', '--choose-file', '{}']
+  default: ['xterm', '-e', 'ranger --choosefile={}']
   desc: >-
     Command (and arguments) to use for selecting a single file in forms.
     The command should write the selected file path to the specified file.
@@ -1234,7 +1237,10 @@ fileselect.multiple_files.command:
   type:
     name: ShellCommand
     placeholder: true
-  default: ['xterm', '-e', 'export COLUMNS= LINES=;ranger --choosefiles={}']
+    completions:
+      - ['xterm', '-e', 'ranger --choosefile={}']
+      - ['xterm', '-e', 'vifm', '--choose-files', '{}']
+  default: ['xterm', '-e', 'ranger --choosefiles={}']
   desc: >-
     Command (and arguments) to use for selecting multiple files in forms.
     The command should write the selected file paths to the specified file,
