--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,10 +126,10 @@ jobs:
             python: 3.7
             args: "tests/unit"  # Only run unit tests on macOS
           ### macOS Big Sur
-          - testenv: py37-pyqt515
-            os: macos-11.0
-            python: 3.7
-            args: "tests/unit"  # Only run unit tests on macOS
+          # - testenv: py37-pyqt515
+          #   os: macos-11.0
+          #   python: 3.7
+          #   args: "tests/unit"  # Only run unit tests on macOS
           ### Windows: PyQt 5.15 (Python 3.7 to match PyInstaller env)
           - testenv: py37-pyqt515
             os: windows-2019
