--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@
 adblock==0.4.0
 attrs==20.3.0
 colorama==0.4.4
+dataclasses==0.6 ; python_version<"3.7"
 importlib-resources==5.0.0 ; python_version<"3.9"
 Jinja2==2.11.2
 MarkupSafe==1.1.1
