--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -1222,8 +1222,8 @@ fileselect.single_file.command:
     name: ShellCommand
     placeholder: true
     completions:
-      - ['xterm', '-e', 'ranger --choosefile={}']
-      - ['xterm', '-e', 'vifm', '--choose-file', '{}']
+      - ['["xterm", "-e", "ranger --choosefile={}"]', "Ranger in xterm"]
+      - ['["xterm", "-e", "vifm", "--choose-file", "{}"]', "vifm in xterm"]
   default: ['xterm', '-e', 'ranger --choosefile={}']
   desc: >-
     Command (and arguments) to use for selecting a single file in forms.
@@ -1238,8 +1238,8 @@ fileselect.multiple_files.command:
     name: ShellCommand
     placeholder: true
     completions:
-      - ['xterm', '-e', 'ranger --choosefile={}']
-      - ['xterm', '-e', 'vifm', '--choose-files', '{}']
+      - ['["xterm", "-e", "ranger --choosefiles={}"]', "Ranger in xterm"]
+      - ['["xterm", "-e", "vifm", "--choose-files", "{}"]', "vifm in xterm"]
   default: ['xterm', '-e', 'ranger --choosefiles={}']
   desc: >-
     Command (and arguments) to use for selecting multiple files in forms.
