Don't download favicons if disabled
Prompted by https://www.cs.uic.edu/~polakis/papers/solomos-ndss21.pdf

--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -1792,7 +1792,11 @@ tabs.favicons.show:
       - always: Always show favicons.
       - never: Always hide favicons.
       - pinned: Show favicons only on pinned tabs.
-  desc: When to show favicons in the tab bar.
+  desc: >-
+    When to show favicons in the tab bar.
+
+    When switching this from never to always/pinned, note that favicons might
+    not be loaded yet, thus tabs might require a reload to display them.
 
 tabs.last_close:
   default: ignore
