tox: Don't run mypy over tests/
With https://github.com/python/mypy/pull/9614, mypy now tries to collect
all files in tests/, but it fails due to:

    tests/end2end/conftest.py: error: Duplicate module named 'conftest' (also at 'tests/end2end/features/conftest.py')
    tests/end2end/conftest.py: error: Are you missing an __init__.py?  [misc]

We should probably add __init__.py files to tests/ at some point...

See #6059 and #5249

--- a/tox.ini
+++ b/tox.ini
@@ -176,7 +176,7 @@ deps =
     -r{toxinidir}/misc/requirements/requirements-tests.txt
     -r{toxinidir}/misc/requirements/requirements-mypy.txt
 commands =
-    {envpython} -m mypy qutebrowser tests {posargs}
+    {envpython} -m mypy qutebrowser {posargs}
 
 [testenv:yamllint]
 basepython = {env:PYTHON:python3}
