--- a/misc/requirements/requirements-tox.txt
+++ b/misc/requirements/requirements-tox.txt
@@ -4,10 +4,13 @@ appdirs==1.4.4
 distlib==0.3.1
 filelock==3.0.12
 packaging==20.8
+pip==21.0
 pluggy==0.13.1
 py==1.10.0
 pyparsing==2.4.7
+setuptools==52.0.0
 six==1.15.0
 toml==0.10.2
 tox==3.21.2
 virtualenv==20.4.0
+wheel==0.36.2
