tests: Ignore SixMetaPathImporter warning
Seems to be raised when importing six (via tldextract/requests/urllib)
on Python 3.10: https://github.com/benjaminp/six/issues/341

See #6068

--- a/pytest.ini
+++ b/pytest.ini
@@ -80,4 +80,5 @@ xfail_strict = true
 filterwarnings =
     error
     default:Test process .* failed to terminate!:UserWarning
+    ignore:_SixMetaPathImporter\.exec_module\(\) not found; falling back to load_module\(\):ImportWarning
 faulthandler_timeout = 90
