--- a/pytest.ini
+++ b/pytest.ini
@@ -37,6 +37,7 @@ markers =
     qtwebkit6021_xfail: Tests which would fail on WebKit version 602.1
     js_headers: Sets JS headers dynamically on QtWebEngine (unsupported on some versions)
     qtwebkit_pdf_imageformat_skip: Broken on QtWebKit with PDF image format plugin installed
+    windows_skip: Tests which should be skipped on Windows
 qt_log_level_fail = WARNING
 qt_log_ignore =
     ^SpellCheck: .*
