mypy: Minor changes to config

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,7 +1,7 @@
 [mypy]
 python_version = 3.6
 
-# --strict
+### --strict
 warn_unused_configs = True
 # disallow_any_generics = True
 disallow_subclassing_any = True
@@ -17,11 +17,13 @@ warn_unused_ignores = True
 # no_implicit_reexport = True
 strict_equality = True
 
-# Other strictness flags
+### Other strictness flags
 warn_unreachable = True
+disallow_any_unimported = True
 
-# Output
+### Output
 show_error_codes = True
+show_error_context = True
 pretty = True
 
 [mypy-colorama]
