Fall back to "prefers-color-scheme: light" on Qt 5.15.2
Due to https://bugreports.qt.io/browse/QTBUG-89753, Qt 5.15.2 matches
no-preference instead of doing auto-detection.

However, no-preference was removed from the CSSWG spec:
https://github.com/w3c/csswg-drafts/issues/3857#issuecomment-499523323

Thus, if we are on a buggy Qt version with no auto-detection possible,
always assume "light". Quoting the spec (emphasis mine):

    light:

    Indicates that user has expressed the preference for
    a page that has a light theme (dark text on light background),
    *or has not expressed an active preference*
    (and thus should receive the "web default" of a light theme).

Fixes #6097
See https://github.com/qutebrowser/qutebrowser/issues/6147#issuecomment-776559729

--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -2832,10 +2832,16 @@ colors.webpage.preferred_color_scheme:
     name: String
     valid_values:
       - auto: Use the system-wide color scheme setting.
-      - light: "Force a light theme. Only available with QtWebEngine 5.15.2+, same as
-            'auto' otherwise."
-      - dark: "Force a dark theme."
-  desc: "Value to use for `prefers-color-scheme:` for websites."
+      - light: Force a light theme.
+      - dark: Force a dark theme.
+  desc: >-
+    Value to use for `prefers-color-scheme:` for websites.
+
+    The "light" value is only available with QtWebEngine 5.15.2+. On older versions, it
+    is the same as "auto".
+
+    The "auto" value is broken on QtWebEngine 5.15.2 due to a Qt bug. There, it will
+    fall back to "light" unconditionally.
   backend:
     QtWebEngine: Qt 5.14
     QtWebKit: false
