mypy: Complete annotations for qutescheme

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -101,3 +101,6 @@ disallow_untyped_defs = True
 
 [mypy-qutebrowser.mainwindow.statusbar.command]
 disallow_untyped_defs = True
+
+[mypy-qutebrowser.browser.qutescheme]
+disallow_untyped_defs = True
