mypy: Add some more fully-typed modules

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -52,12 +52,17 @@ disallow_untyped_defs = True
 
 [mypy-qutebrowser.browser.webengine.webengineinspector]
 disallow_untyped_defs = True
-disallow_incomplete_defs = True
 
 [mypy-qutebrowser.misc.objects]
 disallow_untyped_defs = True
 
+[mypy-qutebrowser.misc.quitter]
+disallow_untyped_defs = True
+
 [mypy-qutebrowser.misc.debugcachestats]
+disallow_untyped_defs = True
+
+[mypy-qutebrowser.misc.elf]
 disallow_untyped_defs = True
 
 [mypy-qutebrowser.misc.utilcmds]
@@ -103,4 +108,7 @@ disallow_untyped_defs = True
 disallow_untyped_defs = True
 
 [mypy-qutebrowser.browser.qutescheme]
+disallow_untyped_defs = True
+
+[mypy-qutebrowser.completion.models.filepathcategory]
 disallow_untyped_defs = True
