--- a/misc/requirements/requirements-mypy.txt
+++ b/misc/requirements/requirements-mypy.txt
@@ -12,6 +12,6 @@ mypy==0.812
 mypy-extensions==0.4.3
 pluggy==0.13.1
 Pygments==2.8.0
--e git+https://github.com/stlehmann/PyQt5-stubs.git@3e0dabfa06ff483fc578e408d000ce50fe4ecf73#egg=PyQt5_stubs
+PyQt5-stubs==5.15.2.0
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
