--- a/misc/requirements/requirements-pylint.txt
+++ b/misc/requirements/requirements-pylint.txt
@@ -5,12 +5,14 @@ certifi==2020.12.5
 cffi==1.14.4
 chardet==4.0.0
 cryptography==3.3.1
+future==0.18.2
 github3.py==1.3.0
 idna==2.10
 isort==4.3.21
 jwcrypto==0.8
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+pefile==2019.4.18
 pycparser==2.20
 pylint==2.4.4  # rq.filter: < 2.5
 python-dateutil==2.8.1
