requirements: Add importlib-metadata

--- a/misc/requirements/requirements-mypy.txt
+++ b/misc/requirements/requirements-mypy.txt
@@ -2,6 +2,7 @@
 
 chardet==4.0.0
 diff-cover==4.2.1
+importlib-metadata==3.7.0
 importlib-resources==5.1.0
 inflect==5.0.2
 Jinja2==2.11.3
@@ -15,3 +16,4 @@ Pygments==2.8.0
 PyQt5-stubs==5.15.2.0
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
+zipp==3.4.0
