--- a/misc/requirements/requirements-tests.txt
+++ b/misc/requirements/requirements-tests.txt
@@ -8,7 +8,7 @@ chardet==4.0.0
 cheroot==8.5.2
 click==7.1.2
 # colorama==0.4.4
-coverage==5.5
+coverage==5.5 ; python_version!="3.10"
 EasyProcess==0.3
 execnet==1.8.0
 filelock==3.0.12
@@ -59,3 +59,4 @@ toml==0.10.2
 urllib3==1.26.3
 vulture==2.3
 Werkzeug==1.0.1
+coverage==5.4; python_version=="3.10"
