--- a/misc/requirements/requirements-tests-git.txt
+++ b/misc/requirements/requirements-tests-git.txt
@@ -1,34 +1,37 @@
-bzr+lp:beautifulsoup
+# Problematic: needs bzr
+# bzr+lp:beautifulsoup
+beautifulsoup4
 git+https://github.com/cherrypy/cheroot.git
-hg+https://bitbucket.org/ned/coveragepy
-git+https://github.com/micheles/decorator.git
+git+https://github.com/nedbat/coveragepy.git
 git+https://github.com/pallets/flask.git
-git+https://github.com/miracle2k/python-glob2.git
-git+https://github.com/HypothesisWorks/hypothesis-python.git
-git+https://github.com/pallets/itsdangerous.git
-git+https://bitbucket.org/zzzeek/mako.git
-git+https://github.com/r1chardj0n3s/parse.git
-git+https://github.com/jenisys/parse_type.git
-hg+https://bitbucket.org/pytest-dev/py
-git+https://github.com/pytest-dev/pytest.git@features
+git+https://github.com/pallets/werkzeug.git  # transitive dep, but needed to work
+git+https://github.com/HypothesisWorks/hypothesis.git#subdirectory=hypothesis-python
+git+https://github.com/pytest-dev/pytest.git
 git+https://github.com/pytest-dev/pytest-bdd.git
-git+https://github.com/pytest-dev/pytest-cov.git
+git+https://github.com/ionelmc/pytest-benchmark.git
 git+https://github.com/pytest-dev/pytest-instafail.git
 git+https://github.com/pytest-dev/pytest-mock.git
 git+https://github.com/pytest-dev/pytest-qt.git
-git+https://github.com/pytest-dev/pytest-repeat.git
 git+https://github.com/pytest-dev/pytest-rerunfailures.git
-git+https://github.com/The-Compiler/pytest-xvfb.git
-hg+https://bitbucket.org/gutworth/six
-hg+https://bitbucket.org/jendrikseipp/vulture
-git+https://github.com/pallets/werkzeug.git
 
+git+https://github.com/ionelmc/python-hunter.git
+git+https://github.com/jendrikseipp/vulture.git
+git+https://github.com/pygments/pygments.git
+git+https://github.com/pytest-dev/pytest-repeat.git
+git+https://github.com/pytest-dev/pytest-cov.git
+git+https://github.com/The-Compiler/pytest-xvfb.git
+git+https://github.com/pytest-dev/pytest-xdist.git
+git+https://github.com/hjwp/pytest-icdiff.git
+git+https://github.com/john-kurkowski/tldextract
+# Problematic: needs rust (and some time to build)
+# git+https://github.com/ArniDagur/python-adblock.git
+adblock ; python_version!="3.10"
 
 ## qutebrowser dependencies
 
-git+https://github.com/tartley/colorama.git
 git+https://github.com/pallets/jinja.git
-git+https://github.com/pallets/markupsafe.git
-git+https://github.com/pygments/pygments.git
-git+https://github.com/python-attrs/attrs.git
 git+https://github.com/yaml/pyyaml.git
+git+https://github.com/tartley/colorama.git
+
+# https://github.com/pyparsing/pyparsing/issues/271
+pyparsing!=3.0.0b2,!=3.0.0b1
