--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,16 @@ commands =
     {envpython} -bb -m pytest {posargs:tests}
     cov: {envpython} scripts/dev/check_coverage.py {posargs}
 
+[testenv:bleeding]
+basepython = {env:PYTHON:python3}
+setenv =
+    PYTEST_QT_API=pyqt5
+    QUTE_BDD_WEBENGINE=true
+pip_pre = true
+deps = -r{toxinidir}/misc/requirements/requirements-tests-bleeding.txt
+commands_pre = pip install --index-url https://www.riverbankcomputing.com/pypi/simple/ --pre --upgrade PyQt5 PyQtWebEngine
+commands = {envpython} -bb -m pytest {posargs:tests}
+
 # other envs
 
 [testenv:misc]
