Fix tab-focus bind in default config
Old version is just useless, so I think this is bug.

--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -3298,7 +3298,7 @@ bindings.default:
       <Ctrl-Shift-W>: close
       D: tab-close -o
       co: tab-only
-      T: tab-focus
+      T: set-cmd-text -s :tab-focus
       gm: tab-move
       gK: tab-move -
       gJ: tab-move +
