--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -531,10 +531,16 @@ content.site_specific_quirks.enabled:
 content.site_specific_quirks.skip:
   type:
     name: FlagList
-    valid_values: [ua-whatsapp, ua-google, ua-slack,
-                   js-whatsapp-web, js-string-replaceall,
-                   js-globalthis, js-object-fromentries,
-                   misc-krunker]
+    valid_values:
+      - ua-whatsapp
+      - ua-google
+      - ua-slack
+      - js-whatsapp-web
+      - js-string-replaceall
+      - js-globalthis
+      - js-object-fromentries
+      - misc-krunker
+      - misc-mathml-darkmode
     none_ok: true
   default: []
   desc: 'Disable a list of named quirks.'
