--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set up problem matchers
         run: "python scripts/dev/ci/problemmatchers.py py38 ${{ runner.temp }}"
-      - run: dbus-run-session tox -e py
+      - name: Run tox
+        run: dbus-run-session tox -e py
 
   tests:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
@@ -166,7 +167,7 @@ jobs:
       - name: "Run ${{ matrix.testenv }}"
         run: "dbus-run-session -- tox -e ${{ matrix.testenv }} -- ${{ matrix.args }}"
         if: "startsWith(matrix.os, 'ubuntu-')"
-      - name: "Run ${{ matrix.testenv }}"
+      - name: "Run ${{ matrix.testenv }} without DBus"
         run: "tox -e ${{ matrix.testenv }} -- ${{ matrix.args }}"
         if: "!startsWith(matrix.os, 'ubuntu-')"
       - name: Analyze backtraces
