notifications: Drop Qt 5.13 support in libnotify presenter
Seems to segfault when showing the second notification, despite our
workarounds for Qt 5.14.

Partial stacktrace:

    0x00007fffeeacfdb2 in std::_Function_handler<void (std::unique_ptr<QWebEngineNotification, std::default_delete<QWebEngineNotification> >), meth_QWebEngineProfile_setNotificationPresenter::{lambda(std::unique_ptr<QWebEngineNotification, std::default_delete<QWebEngineNotification> >)#1}>::_M_invoke(std::_Any_data const&, std::unique_ptr<QWebEngineNotification, std::default_delete<QWebEngineNotification> >) ()
       from .../site-packages/PyQt5/QtWebEngineWidgets.so

    0x00007fffee89ff62 in QWebEngineProfilePrivate::showNotification(QSharedPointer<QtWebEngineCore::UserNotificationController>&) ()
       from .../site-packages/PyQt5/Qt/lib/libQt5WebEngineWidgets.so.5

    0x00007fffe6f45921 in ?? () from .../site-packages/PyQt5/Qt/lib/libQt5WebEngineCore.so.5

It's unlikely this is something we can work around, so let's just
require Qt 5.14 instead.

--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -921,12 +921,14 @@ content.notification_presenter:
       - libnotify: Use a libnotify-compatible presenter if DBus is available, show an
             error (and fall back to Qt's presenter) otherwise.
   backend:
-    QtWebEngine: Qt 5.13
+    QtWebEngine: Qt 5.14
     QtWebKit: false
   desc: >-
     What notification presenter to use for web notifications.
 
-    Windows and macOS will always act as if this is set to `qt.`
+    Note that with Qt 5.14, certain JavaScript features for notifications will not work
+    with the libnotify notification presenter (the `click` and `close` events, as well
+    as the `tag` option to replace existing notifications).
 
 content.pdfjs:
   default: false
