--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -914,15 +914,18 @@ content.notifications.enabled:
 
 content.notifications.presenter:
   default: auto
-  restart: true  # no way to clear the presenter libnotify installs
   type:
     name: String
     valid_values:
       - auto: Use a libnotify-compatible presenter if DBus is available, silently fall
             back to Qt's presenter otherwise.
-      - qt: Use Qt's native notification presenter.
+      - qt: Use Qt's native notification presenter. Switching from or to this value
+            requires a restart of qutebrowser.
       - libnotify: Use a libnotify-compatible presenter if DBus is available, show an
             error (and fall back to Qt's presenter) otherwise.
+      - systray: Use a notification presenter based on a systray icon. This is a
+            reimplementation of the `qt` setting value, but with the possibility to switch
+            to it at runtime.
   backend:
     QtWebEngine: Qt 5.14
     QtWebKit: false
