--- a/.mypy.ini
+++ b/.mypy.ini
@@ -53,6 +53,9 @@ disallow_untyped_defs = True
 [mypy-qutebrowser.browser.webengine.webengineinspector]
 disallow_untyped_defs = True
 
+[mypy-qutebrowser.browser.webengine.notification]
+disallow_untyped_defs = True
+
 [mypy-qutebrowser.misc.guiprocess]
 disallow_untyped_defs = True
 
