--- a/.github/workflows/bleeding.yml
+++ b/.github/workflows/bleeding.yml
@@ -3,9 +3,9 @@ name: Bleeding-edge CI
 on:
   workflow_dispatch:
   schedule:
-    # Every Monday at 03:05 UTC
-    # https://crontab.guru/#05_03_*_*_1
-    - cron: '05 03 * * 1'
+    # Every day at 03:05 UTC
+    # https://crontab.guru/#05_03_*_*_*
+    - cron: '05 03 * * *'
 
 jobs:
   tests:
