--- a/.github/workflows/bleeding.yml
+++ b/.github/workflows/bleeding.yml
@@ -30,16 +30,39 @@ jobs:
       - name: Run tox
         run: dbus-run-session tox -e bleeding
 
+  pyinstaller:
+    if: "github.repository == 'qutebrowser/qutebrowser'"
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: macos-10.15
+          - os: windows-2019
+    runs-on: "${{ matrix.os }}"
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Install dependencies
+        run: |
+            python -m pip install -U pip
+            python -m pip install -U -r misc/requirements/requirements-tox.txt
+      - name: Run tox
+        run: tox -e build-release -- --skip-docs
+
   irc:
     timeout-minutes: 2
     continue-on-error: true
     runs-on: ubuntu-20.04
-    needs: [tests]
+    needs: [tests, pyinstaller]
     if: "always() && github.repository == 'qutebrowser/qutebrowser'"
     steps:
       - name: Send success IRC notification
         uses: Gottox/irc-message-action@v1
-        if: "needs.tests.result == 'success'"
+        if: "needs.tests.result == 'success' && needs.pyinstaller.result == 'success'"
         with:
           server: chat.freenode.net
           channel: '#qutebrowser-dev'
@@ -47,9 +70,10 @@ jobs:
           message: "[${{ github.workflow }}] \u00033Success:\u0003 ${{ github.ref }} https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} (@${{ github.actor }})"
       - name: Send non-success IRC notification
         uses: Gottox/irc-message-action@v1
-        if: "needs.tests.result != 'success'"
+        if: "needs.tests.result != 'success' || needs.pyinstaller.result != 'success'"
         with:
           server: chat.freenode.net
           channel: '#qutebrowser-dev'
           nickname: qutebrowser-bot
-          message: "[${{ github.workflow }}] \u00034FAIL:\u0003 ${{ github.ref }} https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} (@${{ github.actor }})"
+          message: "[${{ github.workflow }}] \u00034FAIL:\u0003 ${{ github.ref }} https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} (@${{ github.actor }})\n
+            tests: ${{ needs.tests.result }}, pyinstaller: ${{ needs.pyinstaller.result }}"
