--- a/.github/workflows/bleeding.yml
+++ b/.github/workflows/bleeding.yml
@@ -46,12 +46,20 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
+      - name: Get asciidoc
+        uses: actions/checkout@v2
+        with:
+          repository: asciidoc-py/asciidoc-py
+          ref: '9.x'
+          path: asciidoc
+      - name: Move asciidoc out of the repo
+        run: mv asciidoc ..
       - name: Install dependencies
         run: |
             python -m pip install -U pip
             python -m pip install -U -r misc/requirements/requirements-tox.txt
       - name: Run tox
-        run: tox -e build-release
+        run: tox -e build-release -- --asciidoc ../asciidoc/asciidoc.py
 
   irc:
     timeout-minutes: 2
