--- a/.github/workflows/bleeding.yml
+++ b/.github/workflows/bleeding.yml
@@ -38,6 +38,9 @@ jobs:
         include:
           - os: macos-10.15
           - os: windows-2019
+            args: --64bit
+          - os: windows-2019
+            args: --32bit
     runs-on: "${{ matrix.os }}"
     timeout-minutes: 30
     steps:
@@ -59,7 +62,7 @@ jobs:
             python -m pip install -U pip
             python -m pip install -U -r misc/requirements/requirements-tox.txt
       - name: Run tox
-        run: tox -e build-release -- --asciidoc ../asciidoc/asciidoc.py --gh-token "${{ secrets.GITHUB_TOKEN }}"
+        run: "tox -e build-release -- --asciidoc ../asciidoc/asciidoc.py --gh-token ${{ secrets.GITHUB_TOKEN }} ${{ matrix.args }}"
 
   irc:
     timeout-minutes: 2
