--- a/.github/workflows/bleeding.yml
+++ b/.github/workflows/bleeding.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: Release files
+          name: "qutebrowser-nightly-${{ github.sha }}"
           path: |
             qutebrowser-*.dmg
             dist/qutebrowser-*-windows-standalone-*.zip
