ci: Move macOS dmg to dist/

--- a/.github/workflows/bleeding.yml
+++ b/.github/workflows/bleeding.yml
@@ -68,7 +68,7 @@ jobs:
         with:
           name: "qutebrowser-nightly-${{ github.sha }}"
           path: |
-            qutebrowser-*.dmg
+            dist/qutebrowser-*.dmg
             dist/qutebrowser-*-windows-standalone-*.zip
             dist/qutebrowser-*-*.exe
 
