--- a/.github/workflows/bleeding.yml
+++ b/.github/workflows/bleeding.yml
@@ -41,6 +41,14 @@ jobs:
             args: --64bit
           - os: windows-2019
             args: --32bit
+          - os: macos-10.15
+            debug: debug
+          - os: windows-2019
+            args: --64bit
+            debug: debug
+          - os: windows-2019
+            args: --32bit
+            debug: debug
     runs-on: "${{ matrix.os }}"
     timeout-minutes: 30
     steps:
@@ -61,6 +69,11 @@ jobs:
         run: |
             python -m pip install -U pip
             python -m pip install -U -r misc/requirements/requirements-tox.txt
+      - name: Set up debugging build
+        if: "${{ matrix.debug }}"
+        run: |
+          echo "PYINSTALLER_DEBUG=1" >> $GITHUB_ENV
+          sed -i '' '/.-d., .--debug.,/s/$/ default=True,/' qutebrowser/qutebrowser.py
       - name: Run tox
         run: "tox -e build-release -- --asciidoc ../asciidoc/asciidoc.py --gh-token ${{ secrets.GITHUB_TOKEN }} ${{ matrix.args }}"
       - name: Upload artifacts
