flatpak: Skip download dispatcher tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -17,6 +17,7 @@ markers =
     mac: Tests which only can run on macOS.
     not_mac: Tests which can not run on macOS.
     not_frozen: Tests which can't be run if sys.frozen is True.
+    not_flatpak: Tests which can't be run if running with Flatpak.
     no_xvfb: Tests which can't be run with Xvfb.
     frozen: Tests which can only be run if sys.frozen is True.
     integration: Tests which test a bigger portion of code
