ci: Move test_mkvenv.py to update-dependencies
It requires some time and network access, so no need to run it as part of the automated tests.

(cherry picked from commit 545a295cf0fc318538a2355f1244cfd2df575af9)

--- a/.github/workflows/recompile-requirements.yml
+++ b/.github/workflows/recompile-requirements.yml
@@ -30,6 +30,18 @@ jobs:
       - name: Recompile requirements
         run: "python3 scripts/dev/recompile_requirements.py ${{ github.events.input.environments }}"
         id: requirements
+      - name: Install apt dependencies
+        run: |
+            sudo apt-get update
+            sudo apt-get install --no-install-recommends libyaml-dev libegl1-mesa libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 asciidoc python3-venv xvfb
+      - name: Install dependencies
+        run: |
+            python -m pip install -U pip
+            python -m pip install -U -r misc/requirements/requirements-tox.txt
+      - name: Run mkvenv.py
+        run: "xvfb-run python3 scripts/mkvenv.py --dev"
+      - name: Run qutebrowser smoke test
+        run: "xvfb-run .venv/bin/python3 -m qutebrowser --no-err-windows --nowindow --temp-basedir about:blank ':later 500 quit'"
       - name: Create pull request
         uses: peter-evans/create-pull-request@v3
         with:
