Improve content.cookies.accept docs
See #6344

--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -440,6 +440,16 @@ content.cookies.accept:
     If this setting is used with URL patterns, the pattern gets applied to the
     origin/first party URL of the page making the request, not the request URL.
 
+    With QtWebEngine 5.15.0+, paths will be stripped from URLs, so URL patterns
+    using paths will not match. With QtWebEngine 5.15.2+, subdomains are
+    additionally stripped as well, so you will typically need to set this
+    setting for `example.com` when the cookie is set on
+    `somesubdomain.example.com` for it to work properly.
+
+    To debug issues with this setting, start qutebrowser with `--debug
+    --logfilter network --debug-flag log-cookies` which will show all cookies
+    being set.
+
 content.cookies.store:
   default: true
   type: Bool
